--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-    "name": "y",
+    "name": "node",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon app.js"
+    "bin": {
+        "node": "www.js"
     },
+    "scripts": {
+        "dev": "nodemon bin/www.js"
+    },
+    "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "cheerio": "^1.0.0-rc.10",
-        "express": "^4.17.3",
-        "http-proxy": "^1.18.1",
-        "mysql": "^2.18.1",
+    "devDependencies": {
+        "nodemon": "^2.0.15",
         "request": "^2.88.2"
     },
-    "devDependencies": {
-        "nodemon": "^2.0.15"
+    "dependencies": {
+        "axios": "^0.25.0",
+        "cheerio": "^1.0.0-rc.10",
+        "iconv-lite": "^0.6.3",
+        "mysql": "^2.18.1"
     }
 }
